<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/cardStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    app:cardElevation="4dp"
    app:contentPadding="0dp">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="0dp"
      android:foreground="?attr/selectableItemBackground"
      android:padding="8dp"
      tools:targetApi="m">

    <TextView
        android:id="@+id/cartTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_cart_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalCost"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/default_cost"
        android:textAlignment="gravity"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemLayout" />

    <LinearLayout
        android:id="@+id/itemLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartTitle">

      <TextView
          android:id="@+id/item1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/default_item_name" />

      <TextView
          android:id="@+id/item2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/default_item_name" />

      <TextView
          android:id="@+id/item3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/default_item_name" />
    </LinearLayout>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemLayout" />

    <Button
        android:id="@+id/duplicateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/duplicate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/totalCost"
        app:layout_constraintTop_toBottomOf="@+id/itemLayout"
        app:layout_constraintVertical_bias="1.0" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>